# WasmEdge-Docker

./: LICENSE  README.md
echo/: Dockerfile  README.md
echo/src/: main.rs
fibonacci-sequence/: Cargo.toml  Dockerfile  README.md
fibonacci-sequence/src/: main.rs
http-client/: Cargo.toml  Dockerfile  README.md
http-client/src/: main.rs
mysql-client/: README.md  docker-compose.yaml
mysql-client/client-app/: Cargo.toml  Dockerfile
mysql-client/client-app/src/: main.rs
mysql-client/db/: Dockerfile  create_table.sql
simple-queue/: Cargo.toml  Dockerfile  README.md
simple-queue/src/: main.rs  queue.rs
