[package]
name = "client-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
hyper_wasi = { version = "0.15", features = ["full"] }
mysql_async_wasi = "0.31.2"
serde =  { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
